--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-binread = "1.4"
 anyhow = "1.0"
 structopt = "0.3"
 miniserde = "0.1"
 byteorder = "1.4"
+nom = "6"
