--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
-structopt = "0.3"
-miniserde = "0.1"
-byteorder = "1.4"
+anyhow = "1"
+structopt = "0"
+miniserde = "0"
+byteorder = "1"
 nom = "6"
+thiserror = "1"
