--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1"
+serde = { version = "1", features = ['derive'] }
+serde_json = "1"
 structopt = "0"
-miniserde = "0"
 byteorder = "1"
-nom = "6"
-thiserror = "1"
-rayon = "1.5.0"
+rayon = "1.5"
+image = "0.23"
+dialoguer = "0"
+arcsys = { git = "https://github.com/super-continent/arcsys.git" }
